# libpq

./: CMakeLists.txt  HISTORY  INSTALL  configure.cmake  dist.info
cmake/: configure.cmake  stack_direction.c
include/pgsql/: pg_config.h  pg_config.h.in  pg_config_paths.h.in
lib/: libpq.dylib
src/backend/libpq/: ip.c
src/include/: pg_config.h.in  pg_config.h.mingw
src/include/port/: win32.h
src/interfaces/libpq/: .gitignore  libpq-dist.rc
src/port/: pg_config_paths.h.in
